пересылка, первый пуш не сработал

--- a/less-1-z1.html
+++ b/less-1-z1.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Celsius to farengeiht</title>
 </head>
 <body>
-$END$
+    <script>
+        'use strict'
+
+        let cTemp = +prompt("Введите температуру в градусах по целсию");
+        let cFar = (9 / 5) * cTemp + 32;
+        alert(`${cTemp} \u2103 = ${cFar} \u2109`);
+    </script>
 </body>
 </html>
