--- a/less-1-z4.html
+++ b/less-1-z4.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>async defer</title>
 </head>
 <body>
-$END$
+<script>
+
+    // атрибуты тэга script - async и defer используются для паралельной закгрузки частей яваскрипта
+    // для того чтобы загрузка внешнего вида страницы не останавливалась в ожидании полной загрузки
+    // скрипта.
+    // Их отличие: при атрибуте async как только скрипт паралельно загрузится, он тут же запускается на
+    // выполнение.
+    // При атрибуте defer после загрузки яваскрипта ожидается сначала полная загрузка страницы Html,
+    // затем только скрипт запускается. Причем если скриптов несколько они выполняются по порядку.
+</script>
 </body>
 </html>
