--- a/less-1-z2.html
+++ b/less-1-z2.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>admin name</title>
 </head>
 <body>
-$END$
+<script>
+    'use strict`'
+
+    let admin, name;
+    name = "Василий";
+    admin = name;
+    console.log(admin);
+</script>
 </body>
 </html>
