--- a/less-1-z3.html
+++ b/less-1-z3.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <script>
-  'use strict'
+  'use strict';
 
   console.log(10 + 10 + "10");// в выражении сначала складываются два числа типа number -
   // получаетс число 20, затем происходит конкатинация со строкой "10", цифры переводятся
