--- a/less-1-z5.html
+++ b/less-1-z5.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    'use strict'
+    'use strict';
 
     let ticketNum = +prompt("Введите шестизначный номер билета:");
 
