результаты работы префикс ++а и постфикс b++

--- a/less-2-z1.html
+++ b/less-2-z1.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Урок 1 задание 2</title>
 </head>
 <body>
-$END$
+<script>
+    'use strict';
+
+    let a = 1, b = 1, c, d;
+    // ниже происходит увеличениу переменной "а" на единцу,
+    // затем ее значение присваивается "b"
+    c = ++a;
+    alert(c); // 2
+    // в данном случае сначала "d" присваиваится значение "b",
+    // затем "b" увеличивается на единцу,
+    // происходит это из-за постфиксной записи ++
+    d = b++;
+    alert(d); // 1
+    // ниже переменная "a" по ходу выполнения программы уже имеющая значение 2
+    // увеличивается на единицу, затем к 2 прибавляется ее значение 3,
+    // получившийся результат 5 присваевается "c"
+    c = 2+ ++a;
+    alert(c); // 5
+    // к двойке прибавляется текущее значение "b" 2,
+    // и полученная 4 присвается "d",
+    // увеличение на единицу "b" происходит в последнюю очередь.
+    d = 2+ b++;
+    alert(d); // 4
+    // походу программы увеличение на единиуц переменных
+    // а(префиксным ++) и b(постфиксным ++) происходило по два раза.
+    //  В итоге каждый получил по значениею 3
+    alert(a); // 3
+    alert(b); // 3
+
+</script>
 </body>
 </html>
