--- a/less-2-z2.html
+++ b/less-2-z2.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>урок 1 задание 2</title>
 </head>
 <body>
-$END$
+<script>
+    'use strict';
+
+    // Чему будут равны переменные x и a в примере ниже?
+    // Написать почему так произошло (описать последовательность действий).
+    let a = 2;
+    let x = 1 + (a *= 2);
+    // переменная "а" будет равна 4, так как запись
+    // a *= 4 равноценна a = a * 4
+    // затем берется значение из переменной "а", увеличивается на единиц
+    // и присваевется "х", в итоге он равен 5.
+
+</script>
 </body>
 </html>
