функции арифметических операций для двух чисел

--- a/less-2-z4.html
+++ b/less-2-z4.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>урок 2 задание 4</title>
 </head>
 <body>
-$END$
+<script>
+  // Реализовать основные 4 арифметические операции (+, -, /, *) 
+  // в виде функций с двумя параметрами.
+  // Обязательно использовать оператор return.
+    function add(a, b) {
+        return a + b;   
+    }
+    
+    function subt(a, b) {
+      return a - b;      
+    }
+    
+    function div(a, b) {
+      return a / b;
+    }
+
+    function product(a, b) {
+        return a * b;
+    }
+</script>
 </body>
 </html>
