--- a/less-2-z6.html
+++ b/less-2-z6.html
@@ -15,24 +15,75 @@
   // Если пользователь введет любое другое целое число, программа также должна выдать соответствующее сообщение,
   // в котором будет отображено это число, а также поставить верное окончание в слове "рубль".
   // Для получения верного склонения слова (любого слова с числом) вам необходимо создать функцию.
+  /**
+   * Запрос числа у пользовотля
+   * @param {string} msg - текстовое сообщение(запрос) для пользователя
+   * @returns {unsigned integer}  число от пользователя
+   */
   function getAmountFromUser(msg) {
     let amount = +prompt(msg);
-    if (Number.isNaN(amount) || !Number.isInteger(amount) || amount < 1)
-      return getAmountFromUser("Ввудите сумму ввиде целого положительного числа:");
+    if (Number.isNaN(amount) || !Number.isInteger(amount) || amount < 1) {
+      return getAmountFromUser("Ввeдите сумму ввиде целого положительного числа:");
+    }
+
     return amount;
   }
+
+  /**
+   * добовляет числу суммы единицу измерения - "рубль" с правильным окончанием
+   * @param {number, string} amount - количество рублей
+   * @returns {string}
+   */
   function rubToStr(amount){
     //guard
     if (typeof(amount) === 'string') amount = Number.parseInt(amount);
     if (Number.isNaN(amount)) return null;
 
-    let lastDigit = Math.floor(amount % 10), penult = Math.floor(amount / 10) % 10;
-    if      (lastDigit === 1 && penult !== 1 )                      return amount + ' рубль';
-    else if (lastDigit === 2 || lastDigit === 3 || lastDigit === 4) return amount + ' рубля';
+    let lastDigit = Math.floor(amount % 10), preLastDigit = Math.floor(amount / 10) % 10;
+
+    if      (lastDigit === 1 && preLastDigit !== 1 ) {
+      return amount + ' рубль';
+    }
+    else if (lastDigit === 2 && preLastDigit !== 1 ||
+             lastDigit === 3 && preLastDigit !== 1 ||
+             lastDigit === 4 && preLastDigit !== 1 ) {
+      return amount + ' рубля';
+    }
+
     return amount + ' рублей';
   }
+
+  /**
+   * функция для получения верного склонения слова (любого слова с числом)
+   * @param amount - числовое значение (количество)
+   * @param firstSufWord - слово с суффиксом для числа оканчивающегося на "один"
+   * @param secondToForthSufWord - слово с суффиксом для чисел оканчивающихся на "два" "три" "четыре"
+   * @param commonSufWord - слово с суффиксом для всех остальных чисел
+   * @returns {string, null} при корректном вводе возвращает строку с количеством и правильным окончанием исчисляемого
+   */
+  function finalizeQuantity(amount, firstSufWord, secondToForthSufWord, commonSufWord){
+    //guard
+    if (typeof(amount) === 'string') amount = Number.parseInt(amount);
+    if (Number.isNaN(amount)) return null;
+
+    let lastDigit = Math.floor(amount % 10), preLastDigit = Math.floor(amount / 10) % 10;
+
+    if      (lastDigit === 1 && preLastDigit !== 1 ) {
+      return amount + " " + firstSufWord;
+    }
+    else if (
+      lastDigit === 2 && preLastDigit !== 1 ||
+      lastDigit === 3 && preLastDigit !== 1 ||
+      lastDigit === 4 && preLastDigit !== 1 ) {
+
+      return amount + " " + secondToForthSufWord;
+    }
+
+    return amount + " " + commonSufWord;
+  }
+
   let amount = getAmountFromUser("Введите количество денег, которые вы хотите разместить в банке:");
-  alert(`Ваша сумма в ${rubToStr(amount)} успешно зачислена.`);
+  alert(`Ваша сумма в ${finalizeQuantity(amount, "рубль", "рубля", "рублей")} успешно зачислена.`);
   console.log(rubToStr(amount));
 </script>
 </body>
