--- a/less-3-dz-3.html
+++ b/less-3-dz-3.html
@@ -22,7 +22,7 @@
 // ```
   'use strict';
 
-  for (let i = 0, prod = 1, step = 'x'; i < 20; i++, prod +=2) {
+  for (let i = 0,  step = 'x'; i < 20; i++) {
 
     if (i !== 0) {
       step += 'xx';
