исправлены недопечатка и опечатка

--- a/less-3-dz-5.html
+++ b/less-3-dz-5.html
@@ -33,9 +33,9 @@
 
   let maxSumArrIdx = 0, maxSumArray = sumArray(arr[0]);
   for (let i = 1; i < arr.length; i++) {
-    let curArrSum = sumArray(arr[i])
+    let curArrSum = sumArray(arr[i]);
     if (curArrSum > maxSumArray) {
-      maxSumArray = curArrSum;``
+      maxSumArray = curArrSum;
       maxSumArrIdx = i;
     }
   }
