--- a/less-4-dz-z2.html
+++ b/less-4-dz-z2.html
@@ -93,7 +93,7 @@
       player,
       /**
        * Проверка выхода за границы карты игрока
-       * @param {int} - направление движения
+       * @param {int} dir - направление движения
        * @return {boolean} - false при движении за границу,
        * иначе возвращает true
        */
