--- a/less-4-dz-z2.html
+++ b/less-4-dz-z2.html
@@ -5,193 +5,209 @@
   <title>Бродилка</title>
 </head>
 <body>
-  <script>
-    //TODO:
-    // 2*. Для игры, реализованной на уроке (бродилка), добавить возможность ходить по диагонали цифрами 1, 3, 7, 9.
-    // Также необходимо сделать так, чтобы пользователь не мог совершить шаг в стенку, т.е. при направлении в стенку
-    // игрок оставался на том же месте где стоял.
+<script>
+  // 2*. Для игры, реализованной на уроке (бродилка), добавить возможность ходить по диагонали цифрами 1, 3, 7, 9.
+  // Также необходимо сделать так, чтобы пользователь не мог совершить шаг в стенку, т.е. при направлении в стенку
+  // игрок оставался на том же месте где стоял.
 
-    "use strict";
+  "use strict";
 
-    /**
-     * Объект с настройками игры.
-     * @property {int} rowsCount Количество строк в карте.
-     * @property {int} colsCount Количество колонок в карте.
-     * @property {int} startPositionX Начальная позиция игрока по X координате.
-     * @property {int} startPositionY Начальная позиция игрока по Y координате.
-     */
-    const settings = {
-      rowsCount: 10,
-      colsCount: 10,
-      startPositionX: 0,
-      startPositionY: 0,
-    };
+  /**
+   * Объект с настройками игры.
+   * @property {int} rowsCount Количество строк в карте.
+   * @property {int} colsCount Количество колонок в карте.
+   * @property {int} startPositionX Начальная позиция игрока по X координате.
+   * @property {int} startPositionY Начальная позиция игрока по Y координате.
+   */
+  const settings = {
+    rowsCount: 10,
+    colsCount: 10,
+    startPositionX: 0,
+    startPositionY: 0,
+  };
 
-    /**
-     * Объект игрока, здесь будут все методы и свойства связанные с ним.
-     * @property {int} x Позиция по X-координате.
-     * @property {int} y Позиция по Y-координате.
-     */
-    const player = {
-      x: null,
-      y: null,
-
-      /**
-       * Инициализация игрока и его метоположения.
-       */
-      init(startX, startY) {
-        this.x = startX;
-        this.y = startY;
-      },
-
-      /**
-       * Двигает игрока по переданному направлению.
-       * @param {int} direction Направление, в котором будет движение.
-       */
-      move(direction) {
-        // Определяем направление и обновляем местоположение игрока в зависимости от направления.
-        switch (direction) {
-          case 1:
-            this.y++;
-            this.x--;
-            break;
-          case 2:
-            this.y++;
-            break;
-          case 3:
-            this.y++;
-            this.x++;
-            break;
-          case 4:
-            this.x--;
-            break;
-          case 6:
-            this.x++;
-            break;
-          case 7:
-            this.y--;
-            this.x--;
-            break;
-          case 8:
-            this.y--;
-            break;
-          case 9:
-            this.y--;
-            this.x++;
-            break;
-        }
-      },
-    };
+  /**
+   * Объект игрока, здесь будут все методы и свойства связанные с ним.
+   * @property {int} x Позиция по X-координате.
+   * @property {int} y Позиция по Y-координате.
+   */
+  const player = {
+    x: null,
+    y: null,
 
     /**
-     * Объект игры, здесь будут все методы и свойства связанные с самой игрой в общем.
-     * @property {settings} settings Настройки игры.
-     * @property {player} player Игрок, участвующий в игре.
+     * Инициализация игрока и его метоположения.
      */
-    const game = {
-      settings,
-      player,
-      /**
-       * Проверка выхода за границы карты игрока
-       * @param {int} dir - направление движения
-       * @return {boolean} - false при движении за границу,
-       * иначе возвращает true
-       */
-      isInLimitsOfMap(dir) {
-        if ((dir === 7 || dir === 8 || dir === 9) && this.player.y === 0) {
-          return false;
-        } else if ((dir === 7 || dir === 4 || dir === 1) && this.player.x === 0) {
-          return false;
-        } else if ((dir === 2 || dir === 1 || dir === 3) && this.player.y === this.settings.rowsCount - 1) {
-          return false;
-        } else if ((dir === 3 || dir === 6 || dir === 9) && this.player.x === this.settings.colsCount - 1) {
-          return false;
+    init(startX, startY) {
+      this.x = startX;
+      this.y = startY;
+    },
+
+    /**
+     * Двигает игрока по переданному направлению.
+     * @param {int} direction Направление, в котором будет движение.
+     */
+    move(point) {
+      this.x = point.x;
+      this.y = point.y;
+    },
+    /**
+     * Определяем следующию точку движения игрока по данному направлению
+     * @param {int} direction направление движения по цифровой клавиатуре
+     * @returns {object} координаты точки для следующего шага
+     */
+    getNextPosition (direction) {
+      const point = {};
+      switch (direction) {
+        case 1:
+          point.y = this.y + 1;
+          point.x = this.x - 1;
+          break;
+        case 2:
+          point.y = this.y + 1;
+          point.x = this.x;
+          break;
+        case 3:
+          point.y = this.y + 1;
+          point.x = this.x + 1;
+          break;
+        case 4:
+          point.y = this.y;
+          point.x = this.x - 1;
+          break;
+        case 6:
+          point.y = this.y;
+          point.x = this.x + 1;
+          break;
+        case 7:
+          point.y = this.y - 1;
+          point.x = this.x - 1;
+          break;
+        case 8:
+          point.y = this.y - 1;
+          point.x = this.x;
+          break;
+        case 9:
+          point.y = this.y - 1;
+          point.x = this.x + 1;
+          break;
+        default:
+          point.x = 0;
+          point.y = 0;
+      }
+      return point;
+    },
+  };
+
+  /**
+   * Объект игры, здесь будут все методы и свойства связанные с самой игрой в общем.
+   * @property {settings} settings Настройки игры.
+   * @property {player} player Игрок, участвующий в игре.
+   */
+  const game = {
+    settings,
+    player,
+    /**
+     * Проверка выхода за границы карты игрока
+     * @param {int} dir - направление движения
+     * @return {boolean} - false при движении за границу,
+     * иначе возвращает true
+     */
+    isInLimitsOfMap(point) {
+      if (point.x < 0 ||
+        point.y < 0 ||
+        point.x >= this.settings.colsCount ||
+        point.y >= this.settings.rowsCount) {
+        return false;
+      }
+
+      return true;
+    },
+    /**
+     * Запускает игру.
+     */
+    run() {
+      // Инициализируем игрока, ставим его начальное местоположение
+      this.player.init(this.settings.startPositionX, this.settings.startPositionY);
+      // Бесконечный цикл
+      while (true) {
+        // Отображаем нашу игру.
+        this.render();
+
+        // Получаем направление от игрока.
+        const direction = this.getDirection();
+
+        // Если игрок сказал что хочет выйти (набрал -1), значит выходим.
+        if (direction === -1) {
+          alert('До свидания.');
+          return;
         }
 
-        return true;
-      },
-      /**
-       * Запускает игру.
-       */
-      run() {
-        // Инициализируем игрока, ставим его начальное местоположение
-        this.player.init(this.settings.startPositionX, this.settings.startPositionY);
-        // Бесконечный цикл
-        while (true) {
-          // Отображаем нашу игру.
-          this.render();
+        // Получаем следующую точку пользователя в зависимости от направления.
+        const nextPoint = this.player.getNextPosition(direction);
 
-          // Получаем направление от игрока.
-          const direction = this.getDirection();
+        // Двигаем игрока.
+        if (this.isInLimitsOfMap(nextPoint)) {
+          this.player.move(nextPoint);
+        }
+      }
+    },
 
-          // Если игрок сказал что хочет выйти (набрал -1), значит выходим.
-          if (direction === -1) {
-            alert('До свидания.');
-            return;
-          }
+    /**
+     * Отображает игру в консоли.
+     */
+    render() {
+      // Сюда запишем все что надо отобразить.
+      let map = "";
 
-          // Двигаем игрока.
-          if (this.isInLimitsOfMap(direction)) {
-            this.player.move(direction);
+      // Цикл перебирает все строки, которые надо отобразить.
+      for (let row = 0; row < this.settings.rowsCount; row++) {
+        // В каждой строке отображаем для каждой колонки (x - клетка, o - игрок).
+        for (let col = 0; col < this.settings.colsCount; col++) {
+          // Проверяем, если на данной позиции должен быть и игрок, отображаем игрока, если нет - клетку.
+          if (this.player.y === row && this.player.x === col) {
+            map += 'o ';
+          } else {
+            map += 'x ';
           }
         }
-      },
+        // После того как отобразили всю строку делаем переход на следующую строку.
+        map += '\n';
+      }
 
-      /**
-       * Отображает игру в консоли.
-       */
-      render() {
-        // Сюда запишем все что надо отобразить.
-        let map = "";
+      // Чистим консоль.
+      console.clear();
+      // Выводим все что надо отобразить в игре.
+      console.log(map);
+    },
 
-        // Цикл перебирает все строки, которые надо отобразить.
-        for (let row = 0; row < this.settings.rowsCount; row++) {
-          // В каждой строке отображаем для каждой колонки (x - клетка, o - игрок).
-          for (let col = 0; col < this.settings.colsCount; col++) {
-            // Проверяем, если на данной позиции должен быть и игрок, отображаем игрока, если нет - клетку.
-            if (this.player.y === row && this.player.x === col) {
-              map += 'o ';
-            } else {
-              map += 'x ';
-            }
-          }
-          // После того как отобразили всю строку делаем переход на следующую строку.
-          map += '\n';
+    /**
+     * Получает и отдает направление от пользователя.
+     * @returns {int} Возвращаем направление, введенное пользователем.
+     */
+    getDirection() {
+      // Доступные значения ввода.
+      const availableDirections = [-1, 1, 2, 3, 4, 6, 7, 8, 9];
+
+      while (true) {
+        // Получаем от пользователя направление.
+        const direction = parseInt(prompt('Введите число, куда вы хотите переместиться, -1 для выхода.'));
+
+        // Если направление не одно из доступных, то сообщаем что надо ввести корректные данные
+        // и начинаем новую итерацию.
+        if (!availableDirections.includes(direction)) {
+          alert(`Для перемещения необходимо ввести одно из чисел: ${availableDirections.join(', ')}.`);
+          continue;
         }
 
-        // Чистим консоль.
-        console.clear();
-        // Выводим все что надо отобразить в игре.
-        console.log(map);
-      },
+        // Если пользователь ввел корректное значение - отдаем его.
+        return direction;
+      }
+    },
+  };
 
-      /**
-       * Получает и отдает направление от пользователя.
-       * @returns {int} Возвращаем направление, введенное пользователем.
-       */
-      getDirection() {
-        // Доступные значения ввода.
-        const availableDirections = [-1, 1, 2, 3, 4, 6, 7, 8, 9];
-
-        while (true) {
-          // Получаем от пользователя направление.
-          const direction = parseInt(prompt('Введите число, куда вы хотите переместиться, -1 для выхода.'));
-
-          // Если направление не одно из доступных, то сообщаем что надо ввести корректные данные
-          // и начинаем новую итерацию.
-          if (!availableDirections.includes(direction)) {
-            alert(`Для перемещения необходимо ввести одно из чисел: ${availableDirections.join(', ')}.`);
-            continue;
-          }
-
-          // Если пользователь ввел корректное значение - отдаем его.
-          return direction;
-        }
-      },
-    };
-
-    // Запускаем игру.
-    game.run();
-  </script>
+  // Запускаем игру.
+  game.run();
+</script>
 </body>
 </html>
