--- a/dz-6_gallery/index.html
+++ b/dz-6_gallery/index.html
@@ -33,6 +33,20 @@
       top: 0;
       right: 0;
     }
+    .galleryWrapper__previos {
+      z-index: 101;
+      width: 5%;
+      position: absolute;
+      top: 50%;
+      left:0;
+    }
+    .galleryWrapper__next {
+      z-index: 101;
+      width: 5%;
+      position:absolute;
+      top:50%;
+      right:0;
+    }
   </style>
 </head>
 <body>
@@ -43,10 +57,13 @@
     <img src="images/min/4.jpg" data-full_image_url="images/max/4.jpg" alt="Картинка4">
   </div>
   <!--
-  <div class="galleryWrapper">
+  <!--<div class="galleryWrapper">--?
+    <img class="galleryWrapper__previos" src="images/gallery/left.svg">
     <div class="galleryWrapper__screen"></div>
-    <img class="galleryWrapper__close" src="images/gallery/close.png" alt="">
+    <img class="galleryWrapper__close" src="images/gallery/close.png" alt="prev">
     <img class="galleryWrapper__image" src="images/max/1.jpg" alt="">
+    <img class="galleryWrapper__next"  src="images/gallery/right.svg" alt="next">
+
   </div>
   -->
   <script src="js.js"></script>
@@ -56,4 +73,7 @@
 
 <!--Доработать функцию замены картинки в галерее таким образом, чтобы она проверяла наличие большой
  картинки по указанному в src адресу. Если такой картинки не существует или она не доступна, то должна
- ставиться картинка-заглушка сообщающая об ошибке.-->
+ ставиться картинка-заглушка сообщающая об ошибке.
+3*. Добавить в галерею функцию перехода к следующему изображению. По сторонам от большой картинки
+должны быть стрелки “вперед” и “назад”, по нажатию на которые происходит замена изображения на
+следующее или предыдущее.-->
