--- a/dz-6_gallery/index.html
+++ b/dz-6_gallery/index.html
@@ -40,6 +40,11 @@
       top: 50%;
       left:0;
     }
+    .galleryWrapper__previos:hover, .galleryWrapper__next:hover{
+      background: gray;
+      transition-duration: 0.3s;
+    }
+
     .galleryWrapper__next {
       z-index: 101;
       width: 5%;
