--- a/dz-7/index.html
+++ b/dz-7/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="game-wrap">
+    <h2 class="score">Счет игры: <span id="score">0</span></h2>
     <table id="game"></table>
   </div>
   <div id="menu">
